Se agregan los apartados de los sidebar

--- a/index.html
+++ b/index.html
@@ -38,13 +38,55 @@
     </div>
 </body>
     
-  <div class="frame">
-<p> Responsive </p>
-<h2>SIDE BAR</h2>
+<div class="yo">
+  <p> Responsive </p>
+  <h2>SIDE BAR</h2>
   <p>in Pure CSS</p>
-
 </div>  
     
+<div class="sobre-mi">
+  <h2>SOBRE MI</h2>
+</div>
+
+<div class="proyectos">
+  <h2>PROYECTO</h2>
+</div>
+
+<div class="educacion">
+  <h2>EDUCACION</h2>
+</div>
+
+<div class="skills">
+  <h2>SKILLS</h2>
+</div>
+
+<div class="contacto">
+  <h2>CONTACTO</h2>
+
+  <div class="login-box">
+    <p>Login</p>
+    <form>
+      <div class="user-box">
+        <input required="" name="" type="text">
+        <label>Email</label>
+      </div>
+      <div class="user-box">
+        <input required="" name="" type="password">
+        <label>Password</label>
+      </div>
+      <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Submit
+      </a>
+    </form>
+    <p>Don't have an account? <a href="" class="a2">Sign up!</a></p>
+  </div>
+
+</div>
+
 </body>
 
 </html>
