Se hacen los hacen los apartados en el html

--- a/index.html
+++ b/index.html
@@ -4,88 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <title>Sidebar Fija</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <title>PORTAFOLIO</title>
 </head>
 
 <body>
-    <input type="checkbox" id="check">
-    <label for="check">
-      <i class="fas fa-bars" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i>
-    </label>
+
     <div class="sidebar">
-      <header>PORTAFOLIO</header>
-      <a href="#" class="active">
-        <span>yo</span>
-      </a>
-      <a href="#">
-        <span>sobre mi</span>
-      </a>
-      <a href="#">
-        <span>proyectos</span>
-      </a>
-      <a href="#">
-        <span>educacion</span>
-      </a>
-      <a href="#">
-        <span>skills</span>
-      </a>
-      <a href="#">
-        <span>contacto</span>
-      </a>
+        <header>PORTAFOLIO</header>
+        <a href="#yo" class="active">Yo</a>
+        <a href="#sobre-mi">Sobre mí</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#educacion">Educación</a>
+        <a href="#skills">Skills</a>
+        <a href="#contacto">Contacto</a>
     </div>
-</body>
-    
-<div class="yo">
-  <p> Responsive </p>
-  <h2>SIDE BAR</h2>
-  <p>in Pure CSS</p>
-</div>  
-    
-<div class="sobre-mi">
-  <h2>SOBRE MI</h2>
-</div>
 
-<div class="proyectos">
-  <h2>PROYECTO</h2>
-</div>
+    <main class="main-content">  
 
-<div class="educacion">
-  <h2>EDUCACION</h2>
-</div>
+      <!-- apartado para yo -->
+      <section id="yo" class="content">
+        <h1>Bienvenido a mi Portafolio</h1>
+        <p>Aquí va el contenido principal...</p>
+      </section>
 
-<div class="skills">
-  <h2>SKILLS</h2>
-</div>
+      <div class="space"></div>
 
-<div class="contacto">
-  <h2>CONTACTO</h2>
+      <!-- apartado para sobre mi -->
+      <section id="sobre-mi" class="content">
+        <h1>Bienvenido a mi Portafolio</h1>
+        <p>Aquí va el contenido principal...</p>
+      </section>
 
-  <div class="login-box">
-    <p>Login</p>
-    <form>
-      <div class="user-box">
-        <input required="" name="" type="text">
-        <label>Email</label>
-      </div>
-      <div class="user-box">
-        <input required="" name="" type="password">
-        <label>Password</label>
-      </div>
-      <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        Submit
-      </a>
-    </form>
-    <p>Don't have an account? <a href="" class="a2">Sign up!</a></p>
-  </div>
+      <div class="space"></div>
 
-</div>
+       <!-- apartado para mis proyectos -->
+      <section id="proyectos" class="content">
+        <h1>Bienvenido a mi Portafolio</h1>
+        <p>Aquí va el contenido principal...</p>
+      </section>
+
+      <div class="space"></div>
+
+       <!-- apartado para hablar sobre mi educacion -->
+      <section id="educacion" class="content">
+        <h1>Bienvenido a mi Portafolio</h1>
+        <p>Aquí va el contenido principal...</p>
+      </section>
+
+      <div class="space"></div>
+
+       <!-- apartado para hablar de mis skills -->
+      <section id="skills" class="content">
+        <h1>Bienvenido a mi Portafolio</h1>
+        <p>Aquí va el contenido principal...</p>
+      </section>
+
+      <div class="space"></div>
+
+      <!-- apartado para el contacto -->
+      <section id="contacto" class="content">
+        <h1>Bienvenido a mi Portafolio</h1>
+        <p>Aquí va el contenido principal...</p>
+      </section>
+
+    </main>
 
 </body>
 
