actualizo el contenido

--- a/index.html
+++ b/index.html
@@ -24,48 +24,48 @@
 
       <!-- apartado para yo -->
       <section id="yo" class="content">
-        <h1>Bienvenido a mi Portafolio</h1>
-        <p>Aquí va el contenido principal...</p>
+        <h1>QUIEN SOY</h1>
+        <p>y aqui no se jajajaja</p>
       </section>
 
       <div class="space"></div>
 
       <!-- apartado para sobre mi -->
       <section id="sobre-mi" class="content">
-        <h1>Bienvenido a mi Portafolio</h1>
-        <p>Aquí va el contenido principal...</p>
+        <h1>SOBRE MI</h1>
+        <p>algo sobre mi .</p>
       </section>
 
       <div class="space"></div>
 
        <!-- apartado para mis proyectos -->
       <section id="proyectos" class="content">
-        <h1>Bienvenido a mi Portafolio</h1>
-        <p>Aquí va el contenido principal...</p>
+        <h1>PROYECTOS PERSONALES</h1>
+        <p>aqui estaran mis proyectos que estoy desarrollando, con su titulo, descripcion y tecnologias utilizadas, tambien el link al demo y al repo</p>
       </section>
 
       <div class="space"></div>
 
        <!-- apartado para hablar sobre mi educacion -->
       <section id="educacion" class="content">
-        <h1>Bienvenido a mi Portafolio</h1>
-        <p>Aquí va el contenido principal...</p>
+        <h1>EDUCACION</h1>
+        <p>aqui pues hablare sobre donde estudio y asi, junto con mi proposito de vida</p>
       </section>
 
       <div class="space"></div>
 
        <!-- apartado para hablar de mis skills -->
       <section id="skills" class="content">
-        <h1>Bienvenido a mi Portafolio</h1>
-        <p>Aquí va el contenido principal...</p>
+        <h1>TECH SKILLS</h1>
+        <p>aqui hablare de mis skills y pondre cada una de ellas con sus logos</p>
       </section>
 
       <div class="space"></div>
 
       <!-- apartado para el contacto -->
       <section id="contacto" class="content">
-        <h1>Bienvenido a mi Portafolio</h1>
-        <p>Aquí va el contenido principal...</p>
+        <h1>CONTACTO</h1>
+        <p>aqui ira un form para que puedan mandar un correo para mi</p>
       </section>
 
     </main>
